# pillar

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py  pyproject.toml
cmake/: version.cmake
src/sample/: CMakeLists.txt  main.cpp
